# edge

./: Cargo.toml  README.md  build.rs  package.json
.github/workflows/: edge-release.yaml
docs/: README.md  authentication.md  cookbook.md  quick-start.md  subscriptions.md
docs/frameworks/: openai-agents-sdk.md
docs/tools/: README.md  agent.md  alerts.md  trade.md
iris-client/src/: main.rs
iris-client/src/client/: mod.rs
iris-client/src/subscriptions/: mod.rs  webhook.rs
iris-client/src/tools/: inspect.rs  portfolio.rs
iris-client/src/types/: events.rs  mod.rs  orders.rs  portfolio.rs
plugins/: claude.md
scripts/: download-binary.js
src/: client.rs  error.rs  lib.rs  main.rs  manifest.rs  server.rs
src/app/: cli.rs  client.rs  commands.rs  handler.rs  mod.rs  orchestrator.rs  runner.rs
src/client/: executor.rs  http_sse.rs  mod.rs  prove_game.rs  routes.rs  transport.rs  trpc.rs  trpc_ws.rs
src/commands/: mod.rs
src/commands/key/: session_manager.rs
src/commands/key/filestore/: create.rs  delete.rs  derivation.rs  lock.rs  unlock.rs  update.rs
src/commands/key/filestore/auth/: passkey.rs
src/commands/key/filestore/crypto/: encryption.rs
src/commands/key/keyring/: create.rs  delete.rs  lock.rs  unlock.rs  update.rs
src/commands/serve/: alerts.rs  local.rs  mcp.rs  mod.rs
src/commands/subscribe/: buffer.rs
src/commands/wallet/: create.rs  delete.rs  import.rs  list.rs  mod.rs  proof.rs  prove.rs  verification.rs
src/commands/wallet/game/: envelope_game.rs  game_state.rs  intents_game.rs  mod.rs  utils.rs
src/domains/: mod.rs
src/domains/alerts/: actor.rs  buffer.rs  errors.rs  handle.rs  messages.rs  mod.rs  webhook.rs
src/domains/client/: actor.rs  errors.rs  handle.rs  messages.rs  mod.rs  routes.rs  state.rs  subscribe.rs  transport.rs  trpc.rs
src/domains/client/manifest/: fetch.rs  inject.rs  manager.rs  mod.rs
src/domains/config/: actor.rs  errors.rs  handle.rs  messages.rs  mod.rs  state.rs  types.rs
src/domains/enclave/: actor.rs  crypto.rs  errors.rs  handle.rs  messages.rs  mod.rs
src/domains/enclave/wallet/: create.rs  delete.rs  import.rs  list.rs  mod.rs  name.rs  operations.rs  proof.rs  types.rs
src/domains/ipc/: actor.rs  errors.rs  handle.rs  messages.rs  mod.rs  protocol.rs  state.rs
src/domains/keystore/: actor.rs  errors.rs  handle.rs  messages.rs  mod.rs
src/domains/keystore/auth/: mod.rs  passkey.rs  password.rs  types.rs
src/domains/keystore/crypto/: derivation.rs  encryption.rs  mod.rs  types.rs
src/domains/keystore/filestore/: create.rs  delete.rs  lock.rs  mod.rs  unlock.rs  update.rs
src/domains/keystore/keyring/: create.rs  delete.rs  mod.rs  update.rs
src/domains/keystore/session/: filestore.rs  keyring.rs  mod.rs
src/domains/mcp/: actor.rs  errors.rs  handle.rs  messages.rs  mod.rs  server.rs  tests.rs
src/domains/trades/: actor.rs  errors.rs  handle.rs  messages.rs  mod.rs
src/event_bus/: dispatch.rs  mod.rs
src/messages/: error.rs  success.rs
src/orders/: mod.rs
src/session/: mod.rs
src/subscriptions/: webhook.rs
src/tools/: alerts.rs  inspect.rs  mod.rs  portfolio.rs  screen.rs  search.rs  trade.rs
src/types/: market.rs  mod.rs  urls.rs
src/utils/: urls.rs
src/wallet/: create.rs  import.rs  mod.rs
(+6 files in other folders)
