[package]
name = "edge-trade"
version = "0.1.0"
edition = "2024"
authors = ["Edge Dot Trade <engineering@edge.trade>"]

[[bin]]
name = "edge"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
hmac = "0.12.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
] }
rmcp = { version = "0.3.0", features = [
  "server",
  "macros",
  "transport-io",
  "transport-sse-server",
  "transport-streamable-http-server",
] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.0", default-features = false, features = [
  "rustls-tls-native-roots",
  "connect",
] }
tokio-util = "0.7.18"
url = "2.5.8"
tower = "0.5.3"
