[package]
name = "poseidon"
version = "0.1.0"
edition = "2024"
authors = ["Edge Dot Trade <engineering@edge.trade>"]

[lib]
name = "poseidon"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "edge"
path = "src/main.rs"

[features]
default = []
keyring-tests = []

[build-dependencies]
heck = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }
typify = { workspace = true }
vergen-gitcl = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }

[dependencies]
# internals
erato = { path = "../erato", default-features = false, features = ["poseidon"] }

# externals
aes-gcm = { workspace = true }
alloy = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored_json = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
html-escape = { workspace = true }
k256 = { workspace = true }
keyring = { workspace = true }
pbkdf2 = { workspace = true }
redis = { workspace = true, features = ["tokio-rustls-comp"] }
reqwest = { workspace = true, features = [
  "json",
  "stream",
  "rustls-no-provider",
] }
rpassword = { workspace = true }
rmcp = { workspace = true }
rustls = { workspace = true, features = ["ring", "std", "tls12", "logging"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["derive"] }
